--- a/static/css/main/test.css
+++ b/static/css/main/test.css
@@ -1,4 +1,5 @@
-@font-face {
+/* 공통으로 적용되는 부분 */
+font-face {
     font-weight: 400;
     font-family: 'Pretendard-Regular';
     src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
@@ -6,35 +7,34 @@
 
 .div1{
     background-color: red;
+    display: inline-block;
 }
 .div2{
     background-color: blue;
+    display: inline-block;
 }
 
-/* 가로모드 모바일 디바이스 (가로 해상도가 1024px(아이패드 프로) 보다 작은 화면에 적용)  */
+/* 모바일 디바이스에서 적용되는 css -> 가로 해상도가 1024px(아이패드 프로) 보다 작은 화면에 적용  */
 @media (max-width: 1024px) {
     .div1 {
-        display: inline-block;
         width: 100vw;
         height: 30vw;
     }
     .div2 {
-        display: inline-block;
         width: 100vw;
         height: 30vw;
     }
 } 
  
- /* 가로모드 모바일 디바이스 (가로 해상도가 768px 보다 작은 화면에 적용)  */
+ /* PC에서 적용되는 css -> 가로 해상도가 1025px 보다 작은 화면에 적용  */
 @media (min-width: 1025px) {
     .div1 {
-        display: block;
-        width: 50vw;
+        width: 49vw;
         height: 50vw;
     }
     .div2 {
-        display: block;
-        width: 50vw;
+        width: 49vw;
         height: 50vw;
     }
 } 
+
