--- a/templates/timetable/schedule-template-master/index.html
+++ b/templates/timetable/schedule-template-master/index.html
@@ -20,8 +20,8 @@
         <li><span>14:30</span></li>
         <li><span>15:00</span></li>
         <li><span>15:30</span></li>
-        <li><span>16:30</span></li>
         <li><span>16:00</span></li>
+        <li><span>16:30</span></li>
         <li><span>17:00</span></li>
         <li><span>17:30</span></li>
         <li><span>18:00</span></li>
@@ -43,12 +43,12 @@
           <div class="cd-schedule__top-info"><span>Monday</span></div>
   
           <ul>
-            <li class="cd-schedule__event" style="top: 49px; height: 101px">
+            <li class="cd-schedule__event" style="top: 49px; height: 50px">
               <a data-start="09:30" data-end="10:30" data-content="event-abs-circuit" data-event="event-1" href="#0">
-                <em class="cd-schedule__name">Abs Circuit</em>
+                <em class="cd-schedule__name">풍물</em>
               </a>
             </li>
-  
+        
             <li class="cd-schedule__event" style="top: 199px; height: 151px">
               <a data-start="11:00" data-end="12:30" data-content="event-rowing-workout" data-event="event-2" href="#0">
                 <em class="cd-schedule__name">Rowing Workout</em>
