--- a/templates/comment/comment.html
+++ b/templates/comment/comment.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="static/css/comment/comment.css" defer=""></script>
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', path='css/comment/comment.css') }}"
+    />
     <script src="static/js/comment/comment.js" defer></script>
   </head>
   <body>
