--- a/static/css/main/home_page3.css
+++ b/static/css/main/home_page3.css
@@ -84,83 +84,15 @@ div, body {
     width: fit-content;
     display: inline-block;
 }
-
 .campus {
     color: #FFFFFF;
-}
-
-.clear {
-    clear: both;
-    display: block;
+    display: inline-block;
 }
 
 /* 구분선 */
 .dottedLine {
     border: none; 
     border-top: 2px dotted #DFDFDF;
-}
-
-/* 토글 디자인 */
-#busList1, #busList2, #busList3 {
-    display: none;
-    margin: 5vw 3vw 0 3vw;
-}
-#busList1 > span {
-    color: #DFDFDF;
-    margin: 0 2vw 1vw 2vw;
-}
-.mapBox {
-    background-color: white;
-    height: 20vh;
-    margin-bottom: 1em;
-}
-#busList2 > span {
-    color: #DFDFDF;
-    margin: 0 2vw 1vw 2vw;
-}
-#busList3 > span {
-    color: #DFDFDF;
-    margin: 0 2vw 1vw 2vw;
-}
-
-/* 모달 스타일 */
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    height: 100%;
-    background-color: rgba(255, 255, 255, 0.05);
-}
-
-.modalContent {
-    background-color: rgba(255, 255, 255, 0.6); /* 60% 투명도 */
-    backdrop-filter: blur(5px);            /* 배경 블러 효과 */
-
-    position: relative;
-    transform: translate(-50%, -50%);
-    left: 50%;
-    top: 50%;
-
-    padding: 20px;
-    border: none;
-    border-radius: 10px;
-
-    width: 80%;
-    max-width: 500px;
-}
-
-#modalTitle {
-    color: #58437C;
-    font-weight: bold;
-    font-size: 1.4em;
-}
-#modalContent {
-    color: #221959;
-    font-size: 1.2em;
 }
 
 @media (max-width: 1024px) {
@@ -184,12 +116,12 @@ div, body {
         margin-left: 8vw;
     }
     .icon {
-        height: 1.8em;
+        height: 6vw;
         width: auto;
         margin-right: 4vw;
     }
     .title {
-        font-size: 1.6em;
+        font-size: 5vw;
     }
 
     .announcementBoxContainer {
@@ -198,49 +130,33 @@ div, body {
     }
     .announcementBox {
         width: 55vw;
-        /* height: 12vh; */
-    }
-    .announcement1{
-        padding: 1.6em;
+        height: 12vh;
     }
     .announcementTitle {
-        font-size: 1.2em;
-        height: 2.8em;
-        overflow: hidden;
-        /* margin: 3vw 3vw 0vw 3vw; */
+        font-size: 4vw;
+        margin: 3vw 3vw 0vw 3vw;
     }
     .announcementContent {
-        font-size: 1em;
-        height: 1.2em;
-        margin-top: 0.5em;
-        overflow: hidden;
-        /* margin: 2vw 3vw 0 3vw; */
+        margin: 2vw 3vw 0 3vw;
     }
 
     /* 오시는 길 */
     .toggleBox {
-        margin: 2vh 8vw 0 8vw;
-        /* display: flex;  */
-        align-items: center;
-    }
-    .toggleList1 {
-        display: flex;          /* 자식 요소들을 수평으로 정렬 */
+        margin: 4vh 8vw 0 8vw;
+        display: flex; 
         align-items: center;
     }
     .toggle {
-        height: 1.2em;
-        display: inline-block;
+        height: 4vw;
     }
     .campus {
-        font-size: 1.2em;
-        display: inline-block;
-        margin-left: 3vw;
+        font-size: 4vw;
+        margin-left: 4vw;
     }
 
     /* 구분선 */
     .dottedLine {
-        width: 90vw;
-        margin-top: 2vh;
-        /* margin: 2vh 8vw;  */
+        width: 80vw;
+        margin: 2vh 8vw; 
     }
 }
