--- a/templates/faq/faq.html
+++ b/templates/faq/faq.html
@@ -10,13 +10,11 @@
 </head>
 <body>
     <div class="container">
-        <div id="home_lineup">
-            <!-- 로고 div -->
-           
+        <div id="logo_img">
                 <img src="{{ url_for('static', path='images/GNU_PIESTA_logo.svg')}}" alt="logo">
                 <p class="logoDate">2024.10.16.WED ~ 10.18.FRI</p>
-            
         </div>
+        <!-- FAQ 섹션을 로고 바로 밑으로 배치 -->
         <section class="faq-section">
             <h2 class="FAQ">FAQ</h2>
             <div class="faq-item">
@@ -39,7 +37,5 @@
             </div>
         </section>
     </div>
-
-    <script src="1.js"></script>
 </body>
 </html>
