--- a/static/css/faq/faq.css
+++ b/static/css/faq/faq.css
@@ -4,16 +4,15 @@
     box-sizing: border-box;
 }
 
-#logoImg {
+#logo_img {
     position: fixed;
     width: 60vw;
     top: 10%;
     left: 50%;
     transform: translate(-50%, -50%);
-    opacity: 0;
-    visibility: hidden;
     transition: opacity 0.3s ease-in-out, visibility 0s 0.3s;
 }
+
 .logoDate {
     text-align: center;
     font-family: "Pretendard-Regular";
@@ -28,7 +27,7 @@
     color: white;
     font-size: 24px;
     letter-spacing: 0.5vw;
-    margin-top: 53px;
+    padding-bottom: 50px;
 }
 
 body {
@@ -37,27 +36,32 @@ body {
     color: white;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     height: 100vh;
+    padding-top: 40px;
 }
 
 .container {
-    width: 375px;
+    width: 380px;
     border-radius: 20px;
     padding: 20px;
     text-align: center;
+    position: relative;
+    margin-top: 20%;
 }
 
-.faq-section h2 {
-    font-size: 20px;
-    margin-bottom: 20px;
+.faq-section {
+    margin-top: 20px;
 }
 
 .faq-item {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     background-color: white;
     border-radius: 10px;
     overflow: hidden;
+    transition: max-height 0.4s ease-out;
+    max-height: 60px;
+    padding: 15px;
 }
 
 .faq-question {
@@ -66,23 +70,34 @@ body {
     border: none;
     color: #413978;
     padding: 15px;
+    padding-top: 7px;
     text-align: left;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 15px;
 }
 
 .faq-answer {
     background-color: white;
     padding: 10px;
-    font-size: 14px;
+    font-size: 15px;
+    padding-top: 7px;
     display: none;
     color: #413978;
+    height: 0;
+    overflow: hidden;
+    transition: height 0.3s ease-out;
+    line-height: 1.6;
 }
 
 .faq-answer.active {
     display: block;
+    height: auto;
+}
+
+.faq-item.active {
+    max-height: 200px;
 }
 
 .faq-item.active .faq-question {
-    border-bottom: 1px solid #413978;
+    border-bottom: 1px solid #423B78;
 }
