--- a/static/css/comment/comment.css
+++ b/static/css/comment/comment.css
@@ -41,13 +41,27 @@ button:hover {
   background-color: #6b6592;
 }
 
-#logo {
+.logo {
+  position: fixed;
+  width: 60vw;
   top: 10%;
-  left: 40%;
-  padding-left: 8vw;
-  padding-right: 8vw;
-  position: relative;
-  transform: translateX(-50%);
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  /* opacity: 0;
+  visibility: hidden; */
+  transition: opacity 0.3s ease-in-out, visibility 0s 0.3s;
+}
+/* .logoDate {
+  text-align: center;
+  font-family: "Pretendard-Regular";
+  color: #afafaf;
+  font-size: 2.5vw;
+  letter-spacing: 0.5vw;
+} */
+.logo-visible {
+  opacity: 1;
+  visibility: visible;
 }
 
 @media (max-width: 1024px) {
@@ -107,6 +121,7 @@ button:hover {
     left: 12vw;
     position: relative;
     width: 70vw;
+    top: 17vh;
   }
 
   .noticetitle {
@@ -173,6 +188,7 @@ button:hover {
     left: 10%;
     position: relative;
     width: 70vw;
+    top: 17vw;
   }
 
   .noticetitle {
