--- a/templates/comment/comment.html
+++ b/templates/comment/comment.html
@@ -11,10 +11,14 @@
     <script src="static/js/comment/comment.js" defer></script>
   </head>
   <body>
-    <div class="topsection">
-      <img id="hambuger" src="static/images/hambuger.svg" alt="" />
-      <img id="logo" src="static/images/logo.svg" alt="" />
-    </div>
+    <!-- <div class="topsection"> -->
+    <!-- <img id="hambuger" src="static/images/hambuger.svg" alt="" /> -->
+    <img
+      class="logo"
+      src="{{ url_for('static', path='images/GNU_PIESTA_logo.svg')}}"
+      alt="logo"
+    />
+    <!-- </div> -->
     <div class="notice">
       <div class="noticetitle">💬 방명록</div>
       <div class="noticec">
