--- a/templates/timetable/timetable.html
+++ b/templates/timetable/timetable.html
@@ -13,25 +13,25 @@
   </header>
 
   <div class="timetable">
-      <div class="times">
-          <div class="time-slot"><span>14:00</span></div>
-          <div class="half-hour"><span>30</span></div>
-          <div class="time-slot"><span>15:00</span></div>
-          <div class="half-hour"><span>30</span></div>
-          <div class="time-slot"><span>16:00</span></div>
-          <div class="half-hour"><span>30</span></div>
-          <div class="time-slot"><span>17:00</span></div>
-          <div class="half-hour"><span>30</span></div>
-          <div class="time-slot"><span>18:00</span></div>
-          <div class="half-hour"><span>30</span></div>
-          <div class="time-slot"><span>19:00</span></div>
-          <div class="half-hour"><span>30</span></div>
-          <div class="time-slot"><span>20:00</span></div>
-          <div class="half-hour"><span>30</span></div>
-          <div class="time-slot"><span>21:00</span></div>
-          <div class="half-hour"><span>30</span></div>
-          <div class="time-slot"><span>22:00</span></div>
-      </div>
+    <div class="times">
+        <div class="time-slot" style="grid-row: 1 / 2;"><span>14:00</span></div>
+        <div class="half-hour" style="grid-row: 2 / 3;"><span>30</span></div>
+        <div class="time-slot" style="grid-row: 3 / 4;"><span>15:00</span></div>
+        <div class="half-hour" style="grid-row: 4 / 5;"><span>30</span></div>
+        <div class="time-slot" style="grid-row: 5 / 6;"><span>16:00</span></div>
+        <div class="half-hour" style="grid-row: 6 / 7;"><span>30</span></div>
+        <div class="time-slot" style="grid-row: 7 / 8;"><span>17:00</span></div>
+        <div class="half-hour" style="grid-row: 8 / 9;"><span>30</span></div>
+        <div class="time-slot" style="grid-row: 9 / 10;"><span>18:00</span></div>
+        <div class="half-hour" style="grid-row: 10 / 11;"><span>30</span></div>
+        <div class="time-slot" style="grid-row: 11 / 12;"><span>19:00</span></div>
+        <div class="half-hour" style="grid-row: 12 / 13;"><span>30</span></div>
+        <div class="time-slot" style="grid-row: 13 / 14;"><span>20:00</span></div>
+        <div class="half-hour" style="grid-row: 14 / 15;"><span>30</span></div>
+        <div class="time-slot" style="grid-row: 15 / 16;"><span>21:00</span></div>
+        <div class="half-hour" style="grid-row: 16 / 17;"><span>30</span></div>
+        <div class="time-slot" style="grid-row: 17 / 18;"><span>22:00</span></div>
+    </div>
 
       <!-- Day 1: OCT 16, WED -->
       <div class="day-column">
@@ -41,7 +41,7 @@
               <div class="event" style="grid-row: 4 / 5;" onclick="showPopup('소리울림', '16:00 ~ 17:00')">소리울림</div>
               <div class="event" style="grid-row: 5 / 6;" onclick="showPopup('기라성', '17:00 ~ 18:00')">기라성</div>
               <div class="event" style="grid-row: 6 / 7;" onclick="showPopup('남가람', '18:00 ~ 19:00')">남가람</div>
-              <div class="event" style="grid-row: 7 / 8;" onclick="showPopup('헛귀', '19:00 ~ 20:00')">햇귀</div>
+              <div class="event" style="grid-row: 7 / 8;" onclick="showPopup('햇귀', '19:00 ~ 20:00')">햇귀</div>
               <div class="event" style="grid-row: 8 / 9;" onclick="showPopup('토네이도', '20:00 ~ 20:30')">토네이도</div>
               <div class="event" style="grid-row: 9 / 10;" onclick="showPopup('스페셜 게스트', '21:00 ~ 22:00')">스페셜 게스트</div>
           </div>
