--- a/static/css/timetable/timetable.css
+++ b/static/css/timetable/timetable.css
@@ -71,7 +71,7 @@ body {
   background-color: #9a76d7;
 }
 
-/* Popup */
+/* Popup
 .popup {
   display: none;
   position: fixed;
@@ -94,4 +94,48 @@ body {
   font-size: 20px;
   float: right;
   cursor: pointer;
+} */
+
+/* modal */
+.modal {
+  display: none; /* 기본적으로 모달은 보이지 않음 */
+  position: fixed; /* 화면 중앙에 고정 */
+  z-index: 200; 
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7); /* 배경을 어둡게 */
+}
+
+.modal-content {
+  position: absolute;
+  left: 10%;
+  top: 40%;
+  background-color: #B18FEB; 
+  color: white; 
+  padding: 20px;
+  border-radius: 10px; /* 약간의 둥근 모서리 */
+  width: 300px;
+  text-align: right; 
+}
+
+.close-modal {
+  color: #FEE5C6;
+  float: right;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.close-modal:hover {
+  color: #442081; 
+}
+
+.modal h3 {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+
+.modal p {
+  font-size: 1.2rem;
 }
