--- a/static/css/main/home_page2.css
+++ b/static/css/main/home_page2.css
@@ -3,20 +3,22 @@ font-face {
 }
 
 .blankTop {
-  margin-top: 12.5rem;
+  margin-top: 18vh;
 }
 
 .piestaDates {
   display: flex;
   justify-content: space-evenly;
   font-family: Prata;
+  margin: 1vh;
 }
 
 .lineUp {
   display: flex;
   justify-content: center;
+  margin: 1vh;
   font-family: Prata;
-  font-size: 1.5rem;
+  font-size: 3vh;
   color: white;
 }
 
@@ -24,56 +26,47 @@ font-face {
   margin: 1rem;
   padding: 0.25rem;
   background-color: #f5f5f5;
-  color: linear-gradient(#58437c, #e2959c);
   size: 1.5rem;
   border-radius: 50%;
-  box-shadow: 0rem 0rem 0.5rem 0.5rem white;
-  font-size: 1.25rem;
+  box-shadow: 0rem 0rem 0.5rem 0.5rem #f5f5f5;
+  font-size: 2vh;
 }
 
 .date:hover {
-  background-color: #e2959c;
+  background-color: #dddddd;
+  box-shadow: 0rem 0rem 0.5rem 0.5rem #dddddd;
 }
+
 #bubble1,
 #bubble2 {
-  width: 10rem;
+  width: 50vh;
   position: relative;
-  z-index: -1;
+  z-index: 1;
 }
 
 #bubble1 {
-  top: 10rem;
-  left: 20rem;
+  top: 20vh;
+  right: 30vh;
+  float: left;
 }
 
 #bubble2 {
-  top: 20rem;
+  left: 30vh;
+  bottom: 40vh;
+  float: right;
 }
 
 .lineupContainer {
-  position: relative;
-  width: 100%;
-  overflow: hidden;
-}
-
-.lineup {
-  display: none;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  transition: transform 0.5s ease-in-out;
-}
-
-.lineup.active {
   display: flex;
   justify-content: center;
-  align-items: center;
+  position: relative;
+  width: 100%;
+  height: 100vh; /* 필요에 따라 높이를 조정 */
 }
 
-.commingSoon {
-  width: 240px;
-  height: 330px;
-  background-color: #e2959c;
-  border-radius: 25%;
+.lineUpList {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.5s ease-in-out;
 }
