--- a/templates/timetable/timetable.html
+++ b/templates/timetable/timetable.html
@@ -193,7 +193,7 @@
       // X 버튼 클릭 시 모달 닫기
       document
         .querySelector(".close-modal")
-        .addEventListener("click"gi, closePopup);
+        .addEventListener("click", closePopup);
     </script>
   </body>
 </html>
