--- a/static/css/main/home_page3.css
+++ b/static/css/main/home_page3.css
@@ -167,8 +167,8 @@ body {
   font-size: 1.2em;
 }
 
-@media (max-width: 1024px) {
-  #home_poster,
+@media(max-width: 768px) {
+    #home_poster,
   #home_lineup,
   #home_info {
     display: flex;
@@ -249,4 +249,13 @@ body {
     margin-top: 2vh;
     /* margin: 2vh 8vw;  */
   }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+
+}
+
+
+@media (min-width: 1025px) {
+  
 }
