--- a/templates/comment/comment.html
+++ b/templates/comment/comment.html
@@ -11,14 +11,13 @@
     <script src="static/js/comment/comment.js" defer></script>
   </head>
   <body>
-    <!-- <div class="topsection"> -->
-    <!-- <img id="hambuger" src="static/images/hambuger.svg" alt="" /> -->
+    <img id="hambuger" src="static/images/hambuger.svg" alt="" />
     <img
       class="logo"
       src="{{ url_for('static', path='images/GNU_PIESTA_logo.svg')}}"
       alt="logo"
     />
-    <!-- </div> -->
+    <!-- <p class="logoDate">2024.10.16.WED ~ 10.18.FRI</p> -->
     <div class="notice">
       <div class="noticetitle">💬 방명록</div>
       <div class="noticec">
