--- a/static/css/booth/booth_list.css
+++ b/static/css/booth/booth_list.css
@@ -5,35 +5,86 @@ font-face {
   src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
     format("woff");
 }
-#booth_info {
-  background-color: #2c2f74;
+
+html,
+body {
+  height: 100%; /* html과 body의 높이를 100%로 설정 */
+  width: 100%;
+  margin: 0; /* 기본 여백 제거 */
+  padding: 0;
 }
-.div1 {
-  background-color: red;
-  display: inline-block;
-}
-.div2 {
-  background-color: blue;
-  display: inline-block;
+body {
+  background: linear-gradient(to bottom, #3b2862, #2c2f74, #cbbce3);
 }
 
 /* 모바일 디바이스에서 적용되는 css -> 가로 해상도가 1024px(아이패드 프로) 보다 작은 화면에 적용  */
-@media (max-width: 1024px) {
-  .div1 {
-    width: 100vw;
-    height: 30vw;
+@media (max-width: 767px) {
+  /* 상단 로고 */
+  #logoImg {
+    position: relative;
+    width: 80vw;
+    top: 5vw; /* 상단 여백 */
+    left: 50%;
+    transform: translateX(-50%);
   }
-  .div2 {
-    width: 100vw;
-    height: 30vw;
+
+  /* 제목 BOOTH */
+  .title {
+    font-size: 7vw;
+    color: #ffffff;
+    text-align: center;
+    margin-top: 35vw; /* 여백 조정 */
+    position: relative; /* 다른 요소들과 겹치지 않게 상대 위치 */
   }
-  .title{
-    
+
+  /* 지도 영역 */
+  .map-container {
+    width: 90vw;
+    height: auto;
+    border-radius: 10px;
+    overflow: hidden; /* 이 속성은 유지 */
+    margin: 0 auto;
+    margin-bottom: 5vw;
+    margin-top: 5vw;
+  }
+
+  .map-container img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px; /* 이미지에도 border-radius 적용 */
+  }
+
+  /* 박스 목록 */
+  .box-container {
+    display: flex;
+    flex-direction: column;
+    gap: 4vw;
+    padding: 0 5vw;
+    position: relative; /* 박스 위치 고정 */
+    margin-top: 10vw;
+  }
+
+  .box {
+    background-color: #ffffff;
+    color: #3b2862;
+    padding: 5vw;
+    border-radius: 15px;
+    text-align: center;
+    font-size: 4vw;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    opacity: 0.5;
+  }
+  #hambuger {
+    width: 50px; /* 너비를 50px로 설정 */
+    height: 50px; /* 높이를 50px로 설정 */
+    position: fixed; /* 위치 고정 */
+    top: 6%; /* 상단에서 10px 떨어짐 */
+    left: 85%; /* 좌측에서 10px 떨어짐 */
   }
 }
 
 /* PC에서 적용되는 css -> 가로 해상도가 1025px 보다 작은 화면에 적용  */
-@media (min-width: 1025px) {
+@media (min-width: 768px) {
   .div1 {
     width: 49vw;
     height: 50vw;
@@ -41,6 +92,12 @@ font-face {
   .div2 {
     width: 49vw;
     height: 50vw;
+  }
+  #hambuger {
+    left: 82%;
+    top: 4%;
+    position: fixed;
+    width: 8vw;
   }
 }
 
