--- a/templates/booth/booth_list.html
+++ b/templates/booth/booth_list.html
@@ -19,6 +19,7 @@
   </head>
   <body>
     <div id="booth_info">
+        <img id="hambuger" src="{{ url_for('static', path='images/hambuger.svg') }}" alt="햄버거" />
       <!-- 로고 div -->
       <div id="logoImg">
         <img
@@ -32,7 +33,8 @@
         <div class="title">BOOTH</div>
       <!-- 지도 영역 -->
     <div class="map-container">
-        <img src="지도이미지경로" alt="지도" style="width: 100%; height: 100%;">
+        <img src="{{ url_for('static', path='images/booth_map.png') }}" alt="지도" >
+
     </div>
 
     <!-- 박스 목록 스크롤 영역 -->
